--- a/c-panel.html
+++ b/c-panel.html
@@ -40,23 +40,6 @@
             justify-content: center;
             align-items: center;
         }
-        #mobile-menu {
-            top: 80px;
-            height: calc(100vh - 80px);
-            transition: transform 0.4s cubic-bezier(0.4, 0, 0.2, 1);
-            transform: translateY(-110%);
-        }
-        #mobile-menu.active {
-            transform: translateY(0);
-        }
-        .nav-icon { width: 30px; height: 20px; position: relative; cursor: pointer; }
-        .nav-icon span { display: block; position: absolute; height: 3px; width: 100%; background: #0f172a; border-radius: 9px; transition: .25s ease-in-out; }
-        .nav-icon span:nth-child(1) { top: 0px; }
-        .nav-icon span:nth-child(2) { top: 10px; }
-        .nav-icon span:nth-child(3) { top: 20px; }
-        .nav-icon.open span:nth-child(1) { top: 10px; transform: rotate(135deg); }
-        .nav-icon.open span:nth-child(2) { opacity: 0; left: -60px; }
-        .nav-icon.open span:nth-child(3) { top: 10px; transform: rotate(-135deg); }
     </style>
 </head>
 <body class="text-slate-900 font-sans antialiased">
@@ -69,25 +52,17 @@
     </div>
 
     <nav class="sticky top-0 z-[110] bg-white/95 backdrop-blur-md border-b border-slate-200 h-20">
-        <div class="max-w-7xl mx-auto px-6 h-full flex justify-between items-center text-left">
+        <div class="max-w-7xl mx-auto px-6 h-full flex justify-between items-center">
             <div class="flex items-center h-full">
                 <a href="index.html" class="flex items-center gap-4">
-                    <img src="logotransparent.png" alt="Art House Logo" class="h-36 w-auto object-contain">
-                    <span class="text-2xl font-black uppercase tracking-widest text-slate-900">Arthouse</span>
+                    <img src="logotransparent.png" alt="Art House Logo" class="h-24 sm:h-36 w-auto object-contain">
+                    <span class="text-xl sm:text-2xl font-black uppercase tracking-widest text-slate-900">Arthouse</span>
                 </a>
             </div>
 
-            <a href="index.html" class="hidden md:inline-block text-sm font-bold uppercase tracking-[0.3em] hover:text-slate-500 transition border-b-2 border-transparent hover:border-slate-900 pb-1">← Буцах</a>
-
-            <button id="menu-toggle" class="md:hidden z-[120] p-2 focus:outline-none">
-                <div class="nav-icon" id="nav-icon">
-                    <span></span><span></span><span></span>
-                </div>
-            </button>
-        </div>
-
-        <div id="mobile-menu" class="fixed left-0 w-full bg-white z-[100] border-b border-slate-200 flex flex-col items-center justify-center md:hidden shadow-2xl">
-            <a href="index.html" class="text-2xl font-black border-2 border-slate-900 px-12 py-6 hover:bg-slate-900 hover:text-white transition uppercase tracking-widest">← Буцах</a>
+            <a href="index.html" class="text-xs sm:text-sm font-bold uppercase tracking-[0.2em] bg-slate-100 px-4 py-2 sm:px-0 sm:py-0 sm:bg-transparent rounded-full hover:text-slate-500 transition">
+                ← Буцах
+            </a>
         </div>
     </nav>
 
@@ -142,7 +117,9 @@
                                 Art House Mongolia
                             </a>
                         </div>
+
                         <div class="w-[1px] h-12 bg-slate-200 hidden sm:block"></div>
+
                         <div class="flex flex-col items-center">
                             <p class="text-[10px] font-bold text-slate-400 uppercase mb-3 tracking-widest">Утас</p>
                             <div class="flex flex-col gap-3">
@@ -181,31 +158,6 @@
     </footer>
 
     <script>
-        const menuToggle = document.getElementById('menu-toggle');
-        const navIcon = document.getElementById('nav-icon');
-        const mobileMenu = document.getElementById('mobile-menu');
-
-        function toggleMenu() {
-            const isActive = mobileMenu.classList.toggle('active');
-            navIcon.classList.toggle('open');
-            document.body.style.overflow = isActive ? 'hidden' : 'auto';
-        }
-
-        function closeMenu() {
-            mobileMenu.classList.remove('active');
-            navIcon.classList.remove('open');
-            document.body.style.overflow = 'auto';
-        }
-
-        menuToggle.addEventListener('click', (e) => {
-            e.stopPropagation();
-            toggleMenu();
-        });
-
-        window.onpopstate = function() {
-            closeMenu();
-        };
-
         function openLightbox(imgSrc) {
             document.getElementById('lightbox-img').src = imgSrc;
             document.getElementById('lightbox-img').style.display = 'block';
