--- a/index.html
+++ b/index.html
@@ -40,14 +40,22 @@
         .product-card img { transition: transform 0.5s ease; }
         .product-card:hover img { transform: scale(1.05); }
 
-        /* FIXED MOBILE MENU STYLING */
+        /* FIXED MOBILE MENU LOGIC */
         #mobile-menu {
-            top: 80px; /* Starts exactly below the 80px nav */
+            top: 80px;
             height: calc(100vh - 80px);
-            transition: transform 0.4s cubic-bezier(0.4, 0, 0.2, 1);
-            transform: translateY(-110%);
+            transition: all 0.3s ease-in-out;
+            opacity: 0;
+            visibility: hidden;
+            transform: translateY(-10px);
+            pointer-events: none; /* Prevents clicking links when hidden */
         }
-        #mobile-menu.active { transform: translateY(0); }
+        #mobile-menu.active {
+            opacity: 1;
+            visibility: visible;
+            transform: translateY(0);
+            pointer-events: auto; /* Allows clicking links when visible */
+        }
         
         /* Animated Hamburger to X */
         .nav-icon { width: 30px; height: 20px; position: relative; cursor: pointer; }
