--- a/decor.html
+++ b/decor.html
@@ -11,37 +11,56 @@
     <link rel="icon" type="image/jpg" href="smalllogo.jpg">
     <script src="https://cdn.tailwindcss.com"></script>
     <style>
+        html { scroll-behavior: smooth; }
         body {
             background: linear-gradient(180deg, #FFFFFF 0%, #F3F4F6 50%, #D1D5DB 100%);
             min-height: 100vh;
         }
-        /* Color Swatch Texture Styling */
         .color-swatch {
-            width: 40px; 
-            height: 40px;
+            width: 80px; 
+            height: 80px;
             border-radius: 50%;
-            cursor: pointer;
-            transition: transform 0.3s ease, border-color 0.3s ease;
-            border: 2px solid white;
+            flex-shrink: 0;
+            border: 4px solid white;
             box-shadow: 0 4px 10px rgba(0,0,0,0.1);
+            transition: transform 0.3s ease;
+            cursor: pointer;
+            background-size: cover;
+            background-position: center;
         }
         .color-swatch:hover {
             transform: scale(1.1);
             border-color: #0f172a;
         }
+        #lightbox {
+            display: none;
+            position: fixed;
+            z-index: 200;
+            top: 0; left: 0; width: 100%; height: 100%;
+            background: rgba(0,0,0,0.95);
+            justify-content: center;
+            align-items: center;
+        }
     </style>
 </head>
-<body class="text-slate-900 font-sans">
+<body class="text-slate-900 font-sans antialiased">
 
-    <nav class="sticky top-0 z-50 bg-white/80 backdrop-blur-xl border-b border-slate-200 h-20">
-        <div class="max-w-7xl mx-auto px-6 h-full flex justify-between items-center">
+    <div id="lightbox" onclick="closeLightbox()">
+        <img id="lightbox-img" src="" alt="Zoomed View" class="max-w-[90%] max-h-[80vh] rounded shadow-2xl">
+    </div>
+
+    <nav class="sticky top-0 z-[110] bg-white/95 backdrop-blur-md border-b border-slate-200 h-20">
+        <div class="max-w-7xl mx-auto pl-2 pr-6 h-full flex justify-between items-center text-left">
             <div class="flex items-center h-full">
-                <a href="index.html" class="flex items-center gap-4 relative">
-                    <img src="logotransparent.png" alt="Art House Logo" class="h-36 w-auto object-contain drop-shadow-md">
-                    <span class="text-2xl font-black uppercase tracking-widest text-slate-900">Arthouse</span>
+                <a href="index.html" class="flex items-center gap-1">
+                    <img src="logotransparent.png" alt="Art House Logo" class="h-24 sm:h-36 w-auto object-contain">
+                    <span class="text-xl sm:text-2xl font-black uppercase tracking-widest text-slate-900">Arthouse</span>
                 </a>
             </div>
-            <a href="index.html" class="text-xs font-bold uppercase tracking-widest">← Буцах</a>
+
+            <a href="index.html" class="text-xs sm:text-sm font-bold uppercase tracking-[0.2em] bg-slate-100 px-4 py-2 rounded-full hover:bg-slate-200 transition">
+                ← Буцах
+            </a>
         </div>
     </nav>
 
@@ -55,25 +74,38 @@
                 </p>
 
                 <div class="mb-12">
-                    <h3 class="font-bold uppercase tracking-widest text-sm mb-6">Өнгөний сонголт:</h3>
-                    <div class="flex gap-4">
-                        <div class="color-swatch bg-slate-100" title="White"></div>
-                        <div class="color-swatch bg-slate-500" title="Grey"></div>
-                        <div class="color-swatch bg-blue-900" title="Blue"></div>
-                        <div class="color-swatch bg-red-800" title="Red"></div>
+                    <h3 class="font-bold uppercase tracking-widest text-sm mb-6">Хүрээний сонголт:</h3>
+                    <div class="grid grid-cols-1 sm:grid-cols-2 gap-y-8 gap-x-4">
+                        <div class="flex items-center gap-4">
+                            <div class="color-swatch" style="background-image: url('decor1.jpg');" onclick="openLightbox('decor1.jpg')"></div>
+                            <span class="text-sm font-black uppercase text-slate-600 tracking-tight">Цонхны хүрээ</span>
+                        </div>
+                        <div class="flex items-center gap-4">
+                            <div class="color-swatch" style="background-image: url('decor2.jpg');" onclick="openLightbox('decor2.jpg')"></div>
+                            <span class="text-sm font-black uppercase text-slate-600 tracking-tight">Булан ба Багана</span>
+                        </div>
+                        <div class="flex items-center gap-4">
+                            <div class="color-swatch" style="background-image: url('decor3.jpg');" onclick="openLightbox('decor3.jpg')"></div>
+                            <span class="text-sm font-black uppercase text-slate-600 tracking-tight">Дээврийн хүрээ</span>
+                        </div>
+                        <div class="flex items-center gap-4">
+                            <div class="color-swatch" style="background-image: url('decor4.jpg');" onclick="openLightbox('decor4.jpg')"></div>
+                            <span class="text-sm font-black uppercase text-slate-600 tracking-tight">3D Хийцлэл</span>
+                        </div>
                     </div>
                 </div>
 
-                <div class="p-8 bg-slate-900 text-white rounded-lg mb-10">
-                    <h3 class="text-xl font-bold mb-2 uppercase">Каталог татах</h3>
-                    <p class="text-slate-400 text-sm mb-6">Бүтээгдэхүүний дэлгэрэнгүй хэмжээ, техникийн үзүүлэлтийг файлаар авна уу.</p>
-                    <a href="catalogue.pdf" download class="inline-block bg-white text-slate-900 px-8 py-3 font-bold uppercase text-xs tracking-widest hover:bg-slate-200 transition">PDF Татах</a>
+                <div class="p-6 bg-slate-900 text-white rounded-lg mb-10 text-left">
+                    <h3 class="text-xl font-bold mb-2 uppercase">Каталог үзэх</h3>
+                    <div class="flex flex-wrap gap-4 mt-4">
+                        <a href="Arthouse broshure.pdf" target="_blank" class="bg-white text-slate-900 px-10 py-4 font-bold uppercase text-xs tracking-widest hover:bg-slate-200 transition shadow-xl">Харах</a>
+                    </div>
                 </div>
 
                 <table class="w-full border-collapse text-sm mb-12">
-                    <tr class="border-b border-slate-300"><td class="py-5 font-bold uppercase text-slate-400">Зузаан</td><td class="py-5 text-right font-medium">50мм - 200мм</td></tr>
-                    <tr class="border-b border-slate-300"><td class="py-5 font-bold uppercase text-slate-400">Даац</td><td class="py-5 text-right font-medium">350кг/м2</td></tr>
-                    <tr class="border-b border-slate-300"><td class="py-5 font-bold uppercase text-slate-400">Гал тэсвэрлэлт</td><td class="py-5 text-right font-medium">REI 60</td></tr>
+                    <tr class="border-b border-slate-300"><td class="py-5 font-bold uppercase text-slate-400">Хөөсөнцрийн нягт</td><td class="py-5 text-right font-medium">20+ кг/м3</td></tr>
+                    <tr class="border-b border-slate-300"><td class="py-5 font-bold uppercase text-slate-400">Гал тэсвэрлэлт</td><td class="py-5 text-right font-medium">Дэмжихгүй</td></tr>
+                    <tr class="border-b border-slate-300"><td class="py-5 font-bold uppercase text-slate-400">Хэмжээний нарийвчлал</td><td class="py-5 text-right font-medium">±1мм</td></tr>
                 </table>
 
                 <div class="mt-12 pt-8 border-t border-slate-200">
@@ -81,28 +113,20 @@
                         <div class="flex flex-col items-center">
                             <p class="text-[10px] font-bold text-slate-400 uppercase mb-3 tracking-widest">Фэйсбүүк</p>
                             <a href="https://www.facebook.com/ArtHouseMGL" target="_blank" class="flex items-center gap-2 text-sm font-black hover:text-slate-500 transition">
-                                <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" fill="currentColor" viewBox="0 0 24 24">
-                                    <path d="M24 12.073c0-6.627-5.373-12-12-12s-12 5.373-12 12c0 5.99 4.388 10.954 10.125 11.854v-8.385H7.078v-3.47h3.047V9.43c0-3.007 1.792-4.669 4.533-4.669 1.312 0 2.686.235 2.686.235v2.953H15.83c-1.491 0-1.956.925-1.956 1.874v2.25h3.328l-.532 3.47h-2.796v8.385C19.612 23.027 24 18.062 24 12.073z"/>
-                                </svg>
+                                <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" fill="currentColor" viewBox="0 0 24 24"><path d="M24 12.073c0-6.627-5.373-12-12-12s-12 5.373-12 12c0 5.99 4.388 10.954 10.125 11.854v-8.385H7.078v-3.47h3.047V9.43c0-3.007 1.792-4.669 4.533-4.669 1.312 0 2.686.235 2.686.235v2.953H15.83c-1.491 0-1.956.925-1.956 1.874v2.25h3.328l-.532 3.47h-2.796v8.385C19.612 23.027 24 18.062 24 12.073z"/></svg>
                                 Art House Mongolia
                             </a>
                         </div>
-
                         <div class="w-[1px] h-12 bg-slate-200 hidden sm:block"></div>
-
                         <div class="flex flex-col items-center">
                             <p class="text-[10px] font-bold text-slate-400 uppercase mb-3 tracking-widest">Утас</p>
                             <div class="flex flex-col gap-3">
                                 <a href="tel:+97688112124" class="flex items-center justify-center gap-2 text-sm font-black hover:text-slate-500 transition">
-                                    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" viewBox="0 0 24 24">
-                                        <path d="M22 16.92v3a2 2 0 0 1-2.18 2 19.79 19.79 0 0 1-8.63-3.07 19.5 19.5 0 0 1-6-6 19.79 19.79 0 0 1-3.07-8.67A2 2 0 0 1 4.11 2h3a2 2 0 0 1 2 1.72 12.84 12.84 0 0 0 .7 2.81 2 2 0 0 1-.45 2.11L8.09 9.91a16 16 0 0 0 6 6l1.27-1.27a2 2 0 0 1 2.11-.45 12.84 12.84 0 0 0 2.81.7A2 2 0 0 1 22 16.92z"/>
-                                    </svg>
+                                    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" viewBox="0 0 24 24"><path d="M22 16.92v3a2 2 0 0 1-2.18 2 19.79 19.79 0 0 1-8.63-3.07 19.5 19.5 0 0 1-6-6 19.79 19.79 0 0 1-3.07-8.67A2 2 0 0 1 4.11 2h3a2 2 0 0 1 2 1.72 12.84 12.84 0 0 0 .7 2.81 2 2 0 0 1-.45 2.11L8.09 9.91a16 16 0 0 0 6 6l1.27-1.27a2 2 0 0 1 2.11-.45 12.84 12.84 0 0 0 2.81.7A2 2 0 0 1 22 16.92z"/></svg>
                                     88112124
                                 </a>
                                 <a href="tel:+97699234050" class="flex items-center justify-center gap-2 text-sm font-black hover:text-slate-500 transition">
-                                    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" viewBox="0 0 24 24">
-                                        <path d="M22 16.92v3a2 2 0 0 1-2.18 2 19.79 19.79 0 0 1-8.63-3.07 19.5 19.5 0 0 1-6-6 19.79 19.79 0 0 1-3.07-8.67A2 2 0 0 1 4.11 2h3a2 2 0 0 1 2 1.72 12.84 12.84 0 0 0 .7 2.81 2 2 0 0 1-.45 2.11L8.09 9.91a16 16 0 0 0 6 6l1.27-1.27a2 2 0 0 1 2.11-.45 12.84 12.84 0 0 0 2.81.7A2 2 0 0 1 22 16.92z"/>
-                                    </svg>
+                                    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" viewBox="0 0 24 24"><path d="M22 16.92v3a2 2 0 0 1-2.18 2 19.79 19.79 0 0 1-8.63-3.07 19.5 19.5 0 0 1-6-6 19.79 19.79 0 0 1-3.07-8.67A2 2 0 0 1 4.11 2h3a2 2 0 0 1 2 1.72 12.84 12.84 0 0 0 .7 2.81 2 2 0 0 1-.45 2.11L8.09 9.91a16 16 0 0 0 6 6l1.27-1.27a2 2 0 0 1 2.11-.45 12.84 12.84 0 0 0 2.81.7A2 2 0 0 1 22 16.92z"/></svg>
                                     99234050
                                 </a>
                             </div>
@@ -112,16 +136,18 @@
             </div>
 
             <div class="order-1 lg:order-2">
-                <div class="relative group">
-                    <img src="c-panel-main.jpg" class="mb-6 grayscale hover:grayscale-0 transition duration-700 w-full shadow-2xl rounded-sm">
+                <div class="relative group cursor-zoom-in" onclick="openLightbox('decorp1.jpg')">
+                    <img src="decorp1.jpg" class="mb-6 group-hover:grayscale-0 transition duration-700 w-full shadow-2xl rounded-sm">
+                    <div class="absolute inset-0 flex items-center justify-center opacity-0 group-hover:opacity-100 transition">
+                        <span class="bg-white/90 px-4 py-2 text-xs font-bold uppercase tracking-tighter">Томруулж үзэх</span>
+                    </div>
                 </div>
                 <div class="grid grid-cols-3 gap-4">
-                    <div class="bg-slate-300 h-24 shadow-sm rounded-sm"></div>
-                    <div class="bg-slate-300 h-24 shadow-sm rounded-sm"></div>
-                    <div class="bg-slate-300 h-24 shadow-sm rounded-sm"></div>
+                    <img src="decorp2.jpg" onclick="openLightbox('decorp2.jpg')" class="bg-slate-300 h-24 w-full object-cover cursor-pointer hover:opacity-80 transition shadow-sm rounded-sm">
+                    <img src="decorp3.jpg" onclick="openLightbox('decorp3.jpg')" class="bg-slate-300 h-24 w-full object-cover cursor-pointer hover:opacity-80 transition shadow-sm rounded-sm">
+                    <img src="decorp4.jpg" onclick="openLightbox('decorp4.jpg')" class="bg-slate-300 h-24 w-full object-cover cursor-pointer hover:opacity-80 transition shadow-sm rounded-sm">
                 </div>
             </div>
-
         </div>
     </main>
 
@@ -129,5 +155,24 @@
         © 2011-2026 Art House | arthouse.mn
     </footer>
 
+    <script>
+        function openLightbox(imgSrc) {
+            const lightbox = document.getElementById('lightbox');
+            const img = document.getElementById('lightbox-img');
+            img.src = imgSrc;
+            lightbox.style.display = 'flex';
+            document.body.style.overflow = 'hidden';
+        }
+
+        function closeLightbox() {
+            const lightbox = document.getElementById('lightbox');
+            lightbox.style.display = 'none';
+            document.body.style.overflow = 'auto';
+        }
+
+        window.onpopstate = function() {
+            closeLightbox();
+        };
+    </script>
 </body>
 </html>
