--- a/m-panel.html
+++ b/m-panel.html
@@ -16,7 +16,6 @@
             background: linear-gradient(180deg, #FFFFFF 0%, #F3F4F6 50%, #D1D5DB 100%);
             min-height: 100vh;
         }
-        /* Color Swatch Texture Styling */
         .color-swatch {
             width: 80px; 
             height: 80px;
@@ -33,7 +32,6 @@
             border-color: #0f172a;
         }
 
-        /* Lightbox Styling */
         #lightbox {
             display: none;
             position: fixed;
@@ -55,15 +53,15 @@
     </div>
 
     <nav class="sticky top-0 z-[110] bg-white/95 backdrop-blur-md border-b border-slate-200 h-20">
-        <div class="max-w-7xl mx-auto px-6 h-full flex justify-between items-center">
+        <div class="max-w-7xl mx-auto pl-2 pr-6 h-full flex justify-between items-center text-left">
             <div class="flex items-center h-full">
-                <a href="index.html" class="flex items-center gap-4">
+                <a href="index.html" class="flex items-center gap-1">
                     <img src="logotransparent.png" alt="Art House Logo" class="h-24 sm:h-36 w-auto object-contain">
                     <span class="text-xl sm:text-2xl font-black uppercase tracking-widest text-slate-900">Arthouse</span>
                 </a>
             </div>
 
-            <a href="index.html" class="text-xs sm:text-sm font-bold uppercase tracking-[0.2em] bg-slate-100 px-4 py-2 sm:px-0 sm:py-0 sm:bg-transparent rounded-full hover:text-slate-500 transition">
+            <a href="index.html" class="text-xs sm:text-sm font-bold uppercase tracking-[0.2em] bg-slate-100 px-4 py-2 rounded-full hover:bg-slate-200 transition">
                 ← Буцах
             </a>
         </div>
@@ -73,7 +71,7 @@
         <div class="grid lg:grid-cols-2 gap-16">
             
             <div class="order-2 lg:order-1">
-                <h1 class="text-6xl font-black uppercase mb-6">M-PANEL</h1>
+                <h1 class="text-6xl font-black uppercase mb-6 italic">M-PANEL</h1>
                 <p class="text-xl text-slate-600 mb-10 leading-relaxed">
                     M-Panel нь барилгын метал нүүртэй дулаалгатай фасад бөгөөд энэхүү фасад нь цаг хугацаа болон эдийн засгийн хэмнэлтэй байх шинэ бүтээгдэхүүн юм.
                 </p>
@@ -101,7 +99,7 @@
                 </div>
 
                 <div class="p-8 bg-slate-900 text-white rounded-lg mb-10 text-left">
-                    <h5 class="text-lg font-bold mb-4 uppercase">Бүтээгдэхүүний танилцуулга бичлэг</h5>
+                    <h5 class="text-lg font-bold mb-4 uppercase italic">Бүтээгдэхүүний танилцуулга бичлэг</h5>
                     <button onclick="openVideo('cEiedz53kjU')" class="inline-block bg-white text-slate-900 px-10 py-4 font-bold uppercase text-xs tracking-[0.2em] hover:bg-slate-200 transition shadow-xl">Видео үзэх</button>
                 </div>
 
@@ -120,9 +118,7 @@
                                 Art House Mongolia
                             </a>
                         </div>
-
                         <div class="w-[1px] h-12 bg-slate-200 hidden sm:block"></div>
-
                         <div class="flex flex-col items-center">
                             <p class="text-[10px] font-bold text-slate-400 uppercase mb-3 tracking-widest">Утас</p>
                             <div class="flex flex-col gap-3">
